Adjusting size of  container to prevent overlapping on options page

--- a/skin/popup.css
+++ b/skin/popup.css
@@ -228,7 +228,7 @@ font-size: 16px;
 .key {
   position: fixed;
   height: 25px;
-  width: 390px;
+  width: 235px;
   z-index: 30;
   background: #fefefe;
   padding-top: 4px;
